[package]
name = "lavalamp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
base64 = "0.22.1"
dotenv = "0.15.0"
ffmpeg-next = "8.0.0"
hex = "0.4.3"
opencv = { version = "0.96.0", features = ["highgui", "videoio", "clang-runtime"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower = { version = "0.5.2", features = ["limit", "buffer"] }
tower-http = { version = "0.6.2", features = ["cors", "catch-panic"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
